initial html page structure

--- a/anita.html
+++ b/anita.html
@@ -1,3 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <title> ANITAS KITCHEN</title>
+  </head>
+  <body>
+    <p>WE PROVIDE THE BEST FOOD</p>
+    <p>AT THE <b>RIGHT PRICES</b></p>
+
+    <p> Happy Hour</p>
+    <p>party time</p>
+    <p>Breakfast</p>
+    <p>Lunch</p>
+    <p>Dinner</p>
+
+    <h1><b>FAST FOOD</b><h1>
+    <h1>You'll love our delicious fast</h1>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
+    <h1>DRINKS</h1>
+    <h1>We also produce delicious drinks</h1>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
+
+
+
+  </body>
+</html>
