adding images to the initial html structure

--- a/anita.html
+++ b/anita.html
@@ -1,26 +1,56 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <script src="js/jq.js"</script>
+    <script src="js/scripts.js"></script>
     <title> ANITAS KITCHEN</title>
   </head>
   <body>
-    <p>WE PROVIDE THE BEST FOOD</p>
-    <p>AT THE <b>RIGHT PRICES</b></p>
-
-    <p> Happy Hour</p>
-    <p>party time</p>
-    <p>Breakfast</p>
-    <p>Lunch</p>
-    <p>Dinner</p>
-
-    <h1><b>FAST FOOD</b><h1>
-    <h1>You'll love our delicious fast</h1>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
-    <h1>DRINKS</h1>
-    <h1>We also produce delicious drinks</h1>
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
-
-
+    <div class="landing">
+      <img src="img/logoBig.png">
+      <p>WE PROVIDE THE BEST FOOD</p>
+      <p>AT THE <b>RIGHT PRICES</b></p>
+    </div>
+    <div class="container">
+      <div class="col-sm">
+      <p> Happy Hour</p>
+      <p>party time</p>
+    </div>
+    <div class="col-sm">
+      <p>Breakfast</p>
+    </div>
+    <div class="col-sm3">
+      <p>Lunch</p>
+    </div>
+    <div class="col-sm">
+      <p>Dinner</p>
+    </div>
+    </div>
+    <section class="row">
+      <article class="col-md-6">
+        <img src="img/fastFood1.jpg">
+        <img src="img/fastFood2.jpg">
+      </article>
+      <article class="col-md-6">
+        <h1><b>FAST FOOD</b><h1>
+        <h1>You'll love our delicious fast</h1>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
+        <button type="button">View Gallery</button>
+      </article>
+    </section>
+    <section class="row">
+      <article class="col-md-6">
+        <h1>DRINKS</h1>
+        <h1>We also produce delicious drinks</h1>
+        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
+        <button type="button">View Gallery</button>
+      </article>
+      <article class="col-md-6">
+        <img src="img/drink1.jpg">
+        <img src="img/drink2.jpg">
+      </article>
 
   </body>
 </html>
