ading comments to the code to make it more readable

--- a/index.html
+++ b/index.html
@@ -1,56 +1,115 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jq.js"</script>
-    <script src="js/scripts.js"></script>
-    <title> ANITAS KITCHEN</title>
-  </head>
-  <body>
-    <div class="landing">
-      <img src="img/logoBig.png">
-      <p>WE PROVIDE THE BEST FOOD</p>
-      <p>AT THE <b>RIGHT PRICES</b></p>
-    </div>
-    <div class="container">
-      <div class="col-sm">
-      <p> Happy Hour</p>
-      <p>party time</p>
-    </div>
-    <div class="col-sm">
-      <p>Breakfast</p>
-    </div>
-    <div class="col-sm3">
-      <p>Lunch</p>
-    </div>
-    <div class="col-sm">
-      <p>Dinner</p>
-    </div>
-    </div>
-    <section class="row">
-      <article class="col-md-6">
-        <img src="img/fastFood1.jpg">
-        <img src="img/fastFood2.jpg">
-      </article>
-      <article class="col-md-6">
-        <h1><b>FAST FOOD</b><h1>
-        <h1>You'll love our delicious fast</h1>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
-        <button type="button">View Gallery</button>
-      </article>
-    </section>
-    <section class="row">
-      <article class="col-md-6">
-        <h1>DRINKS</h1>
-        <h1>We also produce delicious drinks</h1>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
-        <button type="button">View Gallery</button>
-      </article>
-      <article class="col-md-6">
-        <img src="img/drink1.jpg">
-        <img src="img/drink2.jpg">
-      </article>
 
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+
+  <title> ANITAS KITCHEN</title>
+</head>
+
+<body>
+  <!--<section 1-->
+  <div class="landing">
+    <img src="img/logoBig.png">
+    <p>WE PROVIDE THE BEST FOOD</p>
+    <p>AT THE <b>RIGHT PRICES</b></p>
+  </div>
+
+  <!--section 2-->
+  <div class="container">
+    <div class="col-sm-3">
+      <div class="hovereffect">
+        <p> Happy Hour</p>
+        <p>party time</p>
+      </div>
+    </div>
+    <div class="col-sm-3">
+      <div id="Breakfast">
+        <img src="img/foodtop/breakfast.jpg" alt="">
+      </div>
+
+    </div>
+    <div class="col-sm-3">
+      <img src="img/foodtop/lunch.jpg" alt="">
+    </div>
+    <div class="col-sm-3">
+      <img src="img/foodtop/dinner2.jpg" alt="">
+    </div>
+  </div>
+
+  <!--section 3-->
+  <section class="row">
+    <article class="col-md-6">
+      <div class="jumbotron">
+        <div class="fastfoodimg">
+          <img src="img/fastFood1.jpg">
+          <img src="img/fastFood2.jpg">
+        </div>
+      </div>
+    </article>
+    <article class="col-md-6">
+      <div class="panel panel-info">
+
+        <div class="panel-header">
+          <h1><b>FAST FOODS</b></h1>
+          <h1>You'll love our delicious fast foods.</h1>
+        </div>
+        <div class="panel-body">
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
+            ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
+        </div>
+        <div class="panel-footer">
+          <button type="button">View Gallery</button>
+        </div>
+
+      </div>
+
+
+
+    </article>
+  </section>
+
+
+  <div class="row">
+    <div class="col-md-6">
+      <div class="panel panel-info">
+        <div class="panel-header">
+          <h1><b>DRINKS</b></h1>
+          <h1>We also serve delicious drinks.</h1>
+        </div>
+        <div class="panel-body">
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
+            ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
+
+        </div>
+        <div class="panel-footer">
+          <button type="button">View Gallery</button>
+        </div>
+      </div>
+    </div>
+    <article class="col-md-6">
+      <img src="img/drink1.jpg">
+      <img src="img/drink2.jpg">
+    </article>
+
+    <!--section 4-->
+    <div class="section4">
+
+
+      <div class="row">
+        <div class="container">
+          <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#fastfood">Fastfoods</a></li>
+            <li><a data-toggle="tab" href="#">Drinks</a></li>
+            <li><a data-toggle="tab" href="#">chicken</a></li>
+            <li><a data-toggle="tab" href="#">Rice</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+</body>
+
 </html>
