adding the fourth section of the page

--- a/index.html
+++ b/index.html
@@ -19,82 +19,88 @@
   </div>
 
   <!--section 2-->
-  <div class="container">
-    <div class="col-sm-3">
-      <div class="hovereffect">
-        <p> Happy Hour</p>
-        <p>party time</p>
-      </div>
-    </div>
-    <div class="col-sm-3">
-      <div id="Breakfast">
-        <img src="img/foodtop/breakfast.jpg" alt="">
-      </div>
+  <div class="section2">
 
-    </div>
-    <div class="col-sm-3">
-      <img src="img/foodtop/lunch.jpg" alt="">
-    </div>
-    <div class="col-sm-3">
-      <img src="img/foodtop/dinner2.jpg" alt="">
+
+    <div class="container">
+      <div class="col-sm-3">
+        <div class="hovereffect">
+          <p> Happy Hour</p>
+          <p>party time</p>
+        </div>
+      </div>
+      <div class="col-sm-3">
+        <div id="Breakfast">
+          <img src="img/foodtop/breakfast.jpg" alt="">
+        </div>
+
+      </div>
+      <div class="col-sm-3">
+        <img src="img/foodtop/lunch.jpg" alt="">
+      </div>
+      <div class="col-sm-3">
+        <img src="img/foodtop/dinner2.jpg" alt="">
+      </div>
     </div>
   </div>
-
   <!--section 3-->
-  <section class="row">
-    <article class="col-md-6">
-      <div class="jumbotron">
-        <div class="fastfoodimg">
-          <img src="img/fastFood1.jpg">
-          <img src="img/fastFood2.jpg">
+  <div class="section3">
+
+
+    <section class="row">
+      <article class="col-md-6">
+        <div class="jumbotron">
+          <div class="fastfoodimg">
+            <img src="img/fastFood1.jpg">
+            <img src="img/fastFood2.jpg">
+          </div>
+        </div>
+      </article>
+      <article class="col-md-6">
+        <div class="panel panel-info">
+
+          <div class="panel-header">
+            <h1><b>FAST FOODS</b></h1>
+            <h1>You'll love our delicious fast foods.</h1>
+          </div>
+          <div class="panel-body">
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+              aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
+          </div>
+          <div class="panel-footer">
+            <button type="button">View Gallery</button>
+          </div>
+
+        </div>
+
+
+
+      </article>
+    </section>
+
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="panel panel-info">
+          <div class="panel-header">
+            <h1><b>DRINKS</b></h1>
+            <h1>We also serve delicious drinks.</h1>
+          </div>
+          <div class="panel-body">
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut
+              aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
+
+          </div>
+          <div class="panel-footer">
+            <button type="button">View Gallery</button>
+          </div>
         </div>
       </div>
-    </article>
-    <article class="col-md-6">
-      <div class="panel panel-info">
-
-        <div class="panel-header">
-          <h1><b>FAST FOODS</b></h1>
-          <h1>You'll love our delicious fast foods.</h1>
-        </div>
-        <div class="panel-body">
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
-            ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
-        </div>
-        <div class="panel-footer">
-          <button type="button">View Gallery</button>
-        </div>
-
-      </div>
-
-
-
-    </article>
-  </section>
-
-
-  <div class="row">
-    <div class="col-md-6">
-      <div class="panel panel-info">
-        <div class="panel-header">
-          <h1><b>DRINKS</b></h1>
-          <h1>We also serve delicious drinks.</h1>
-        </div>
-        <div class="panel-body">
-          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip
-            ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan.</p>
-
-        </div>
-        <div class="panel-footer">
-          <button type="button">View Gallery</button>
-        </div>
-      </div>
+      <article class="col-md-6">
+        <img src="img/drink1.jpg">
+        <img src="img/drink2.jpg">
+      </article>
     </div>
-    <article class="col-md-6">
-      <img src="img/drink1.jpg">
-      <img src="img/drink2.jpg">
-    </article>
-
     <!--section 4-->
     <div class="section4">
 
@@ -107,9 +113,16 @@
             <li><a data-toggle="tab" href="#">chicken</a></li>
             <li><a data-toggle="tab" href="#">Rice</a></li>
           </ul>
+          <div class="tab-content">
+            <div id="home" class="tab-pane fade in active">
+              <div id="foodCarousel" class="carousel slide" data-ride="carousel">
+                <!--carousel indicator-->
+
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
 </body>
 
 </html>
