--- a/index.html
+++ b/index.html
@@ -106,23 +106,78 @@
 
 
       <div class="row">
-        <div class="container">
-          <ul class="nav nav-tabs">
-            <li class="active"><a data-toggle="tab" href="#fastfood">Fastfoods</a></li>
-            <li><a data-toggle="tab" href="#">Drinks</a></li>
-            <li><a data-toggle="tab" href="#">chicken</a></li>
-            <li><a data-toggle="tab" href="#">Rice</a></li>
-          </ul>
-          <div class="tab-content">
-            <div id="home" class="tab-pane fade in active">
-              <div id="foodCarousel" class="carousel slide" data-ride="carousel">
-                <!--carousel indicator-->
+        <div class="col-sm-12">
+
+
+          <div class="container">
+            <ul class="nav nav-tabs">
+              <li class="active"><a data-toggle="tab" href="#fastfood">Fastfoods</a></li>
+              <li><a data-toggle="tab" href="#">Drinks</a></li>
+              <li><a data-toggle="tab" href="#">chicken</a></li>
+              <li><a data-toggle="tab" href="#">Rice</a></li>
+            </ul>
+            <div id="slider" class="Carousel-slider" data-ride="Carousel">
+
+              <!--indicators-->
+              <ol class="carousel-indicators">
+                <li data-target="#slider" data-slide-to="0" class="item active"></li>
+                <li data-target="#slider" data-slide-to="1"></li>
+                <li data-target="#slider" data-slide-to="2"></li>
+
+              </ol>
+
+              <!--wrapper-->
+              <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                  <img src="img/fastfood/beefBurger.jpg" alt="beef burger">
+                  <div class="carousel-caption">
+                    <h3>BEEF BURGER</h3>
+
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="img/fastfood/chickenBurger.jpg" alt="Chicken burger">
+                  <div class="carousel-caption">
+                    <h3>CHICKEN BURGER</h3>
+
+                  </div>
+                </div>
+                <div class="item">
+                  <img src="img/fastfood/chickenPizza.jpg" alt="Chicken pizza">
+                  <div class="carousel-caption">
+                    <h3>CHICKEN PIZZA</h3>
+
+                  </div>
+                </div>
 
               </div>
+
+
+              <!-- navigation -->
+              <a class="left carousel-control" href="#slider" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">previous</span>
+                  </a>
+              <a class="right carousel-control" href="#slider" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">next</span>
+                  </a>
+
+
+
+
             </div>
           </div>
+
+
         </div>
       </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  <script src="js/jquery-3.3.1.js"></script>
+  <script src="js/jq.js" charset="utf-8"></script>
 </body>
 
 </html>
