--- a/index.html
+++ b/index.html
@@ -101,64 +101,65 @@
         <img src="img/drink2.jpg">
       </article>
     </div>
-    <!--section 4-->
-    <div class="section4">
+  </div>
+  <!--section 4-->
+  <div class="section4">
 
 
-      <div class="row">
-        <div class="col-sm-12">
+    <div class="row">
+      <div class="col-sm-12">
 
 
-          <div class="container">
-            <ul class="nav nav-tabs">
-              <li class="active"><a data-toggle="tab" href="#fastfood">Fastfoods</a></li>
-              <li><a data-toggle="tab" href="#">Drinks</a></li>
-              <li><a data-toggle="tab" href="#">chicken</a></li>
-              <li><a data-toggle="tab" href="#">Rice</a></li>
-            </ul>
-            <div id="slider" class="Carousel-slider" data-ride="Carousel">
+        <div class="container">
+          <ul class="nav nav-tabs">
+            <li class="active"><a data-toggle="tab" href="#fastfood">Fastfoods</a></li>
+            <li><a data-toggle="tab" href="#">Drinks</a></li>
+            <li><a data-toggle="tab" href="#">chicken</a></li>
+            <li><a data-toggle="tab" href="#">Rice</a></li>
+          </ul>
+          <div id="slider" class="Carousel-slider" data-ride="Carousel">
 
-              <!--indicators-->
-              <ol class="carousel-indicators">
-                <li data-target="#slider" data-slide-to="0" class="item active"></li>
-                <li data-target="#slider" data-slide-to="1"></li>
-                <li data-target="#slider" data-slide-to="2"></li>
+            <!--indicators-->
+            <ol class="carousel-indicators">
+              <li data-target="#slider" data-slide-to="0" class="item active"></li>
+              <li data-target="#slider" data-slide-to="1"></li>
+              <li data-target="#slider" data-slide-to="2"></li>
 
-              </ol>
+            </ol>
 
-              <!--wrapper-->
-              <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                  <img src="img/fastfood/beefBurger.jpg" alt="beef burger">
-                  <div class="carousel-caption">
-                    <h3>BEEF BURGER</h3>
+            <!--wrapper-->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="img/fastfood/beefBurger.jpg" alt="beef burger">
+                <div class="carousel-caption">
+                  <h3>BEEF BURGER</h3>
 
-                  </div>
                 </div>
-                <div class="item">
-                  <img src="img/fastfood/chickenBurger.jpg" alt="Chicken burger">
-                  <div class="carousel-caption">
-                    <h3>CHICKEN BURGER</h3>
+              </div>
+              <div class="item">
+                <img src="img/fastfood/chickenBurger.jpg" alt="Chicken burger">
+                <div class="carousel-caption">
+                  <h3>CHICKEN BURGER</h3>
 
-                  </div>
                 </div>
-                <div class="item">
-                  <img src="img/fastfood/chickenPizza.jpg" alt="Chicken pizza">
-                  <div class="carousel-caption">
-                    <h3>CHICKEN PIZZA</h3>
+              </div>
+              <div class="item">
+                <img src="img/fastfood/chickenPizza.jpg" alt="Chicken pizza">
+                <div class="carousel-caption">
+                  <h3>CHICKEN PIZZA</h3>
 
-                  </div>
                 </div>
-
               </div>
 
+            </div>
 
-              <!-- navigation -->
-              <a class="left carousel-control" href="#slider" role="button" data-slide="prev">
+
+            <!-- navigation -->
+            <a class="left carousel-control" href="#slider" role="button" data-slide="prev">
                     <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                     <span class="sr-only">previous</span>
                   </a>
-              <a class="right carousel-control" href="#slider" role="button" data-slide="next">
+            <a class="right carousel-control" href="#slider" role="button" data-slide="next">
                     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                     <span class="sr-only">next</span>
                   </a>
@@ -166,17 +167,101 @@
 
 
 
-            </div>
           </div>
-
-
         </div>
+
+
       </div>
     </div>
   </div>
+
+  <!--section 5-->
+  <div class="section5">
+    <div class="row">
+      <div class="col-md-8" id="testimonialsColumn">
+        <h2>OUR HAPPY CUSTOMERS</h2>
+        <div id="testimonialCarousel" data-ride="carousel" class="carousel-slider">
+
+          <!--indicators-->
+          <ol class="carousel-indicators">
+            <li data-target="#testimonialCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#testimonialCarousel" data-slide-to="1" class="active"></li>
+            <li data-target="#testimonialCarousel" data-slide-to="2" class="active"></li>
+
+          </ol>
+          <!--wrapper-->
+          <div class="carousel-inner">
+            <div class="item active">
+              <h3>Costumer 1</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <img src="img/customers/p1.png" alt="Customer 1">
+            </div>
+            <div class="item">
+              <h3>Costumer 2</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <img src="img/customers/p2.png" alt="Customer 2">
+            </div>
+            <div class="item">
+              <h3>Costumer 3</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+              <img src="img/customers/p3.png" alt="Customer 3">
+            </div>
+
+          </div>
+          <!--navigations-->
+          <a class="left carousel-control" href="#testimonialCarousel" role="button" data-slide="prev">
+                  <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                  <span class="sr-only">previous</span>
+                </a>
+          <a class="right carousel-control" href="#testimonialCarousel" role="button" data-slide="next">
+                  <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                  <span class="sr-only">next</span>
+                </a>
+        </div>
+
+
+      </div>
+      <div class="col-md-4">
+        <h3>ABOUT MENU</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+      </div>
+    </div>
+
   </div>
+  <!--section 6-->
+  <div class="section6">
+    <h2>Get our daily food items delivered to your email.</h2>
+    <form class="form-inline" id="subcribeForm">
+      <div class="form-group">
+        <input type="email" placeholder="your email">
+
+      </div>
+      <button type="submit">SUBCRIBE</button>
+
+    </form>
+
   </div>
-  <script src="js/jquery-3.3.1.js"></script>
+  <!--section 7-->
+  <div class="section7">
+    <footer>
+      <img src="img/footerlogos/logo_white.png" alt="Anita's kitchen logo">
+      <h2><br>MENU</br></h2>
+      <p>That's what we are!</p>
+      <div class="facebookLogo inline">
+        <i class="fa fa-facebook-square" aria-hidden=""></i>
+      </div>
+      <div class="twitterLogo inline">
+        <i class="fa fa-twitter-square" aria-hidden="true"></i>
+      </div>
+      <div class="piniterestLogo inline">
+        <i class="fa fa-pinterest-square"></i>
+      </div>
+      <p id="copyright"><br /><small>&copy; 2018 Resturant Menu<small></p>
+    </footer>
+</div>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="https://use.fontawesome.com/80caa23151.js"></script>
   <script src="js/jq.js" charset="utf-8"></script>
 </body>
 
