--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         <input type="email" placeholder="your email">
 
       </div>
-      <button type="submit">SUBCRIBE</button>
+      <button id="subcribeButton" type="submit">SUBCRIBE</button>
 
     </form>
 
