--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
   <!--section 5-->
   <div class="section5">
-    <div class="row">
+    <div class="row" id="testimonialsRow">
       <div class="col-md-8" id="testimonialsColumn">
         <h2>OUR HAPPY CUSTOMERS</h2>
         <div id="testimonialCarousel" data-ride="carousel" class="carousel-slider">
@@ -223,7 +223,7 @@
       </div>
       <div class="col-md-4">
         <h3>ABOUT MENU</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p id="aboutMenu">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
       </div>
     </div>
