--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
   <!--<section 1-->
   <div class="landing">
+    <div class="menu"></div>
+    <div class="menu"></div>
+    <div class="menu"></div>
     <img src="img/logoBig.png">
     <p>WE PROVIDE THE BEST FOOD</p>
     <p>AT THE <b>RIGHT PRICES</b></p>
@@ -25,8 +28,8 @@
     <div class="container">
       <div class="col-sm-3">
         <div class="hovereffect">
-          <p> Happy Hour</p>
-          <p>party time</p>
+          <p id="happyHour"> Happy Hour</p>
+          <p id="partyTime">party time</p>
         </div>
       </div>
       <div class="col-sm-3">
